--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,19 @@
         app:layout_constraintBottom_toBottomOf="@+id/button2"
         android:layout_marginBottom="8dp" />
 
+    <Button
+        android:id="@+id/train"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:contentDescription="Button"
+        android:text="Train"
+        app:layout_constraintBottom_toBottomOf="@+id/txtResponse2"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        app:layout_constraintRight_toRightOf="@+id/imageView" />
+
     <GridLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
