--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:onClick="StopNotifications"
-        android:text="Stop Notifications"
+        android:onClick="ToggleNotifications"
+        android:text="Notifications"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         android:layout_marginBottom="0dp"
