--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,13 +54,13 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="415dp"
         app:layout_constraintTop_toBottomOf="@+id/btnGet"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.472" />
+        app:layout_constraintHorizontal_bias="0.027" />
 
     <TextView
         android:id="@+id/txtResponse2"
@@ -73,8 +73,9 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2" />
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
         android:id="@+id/getReport"
@@ -201,5 +202,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.27999997" />
+
+
 
 </android.support.constraint.ConstraintLayout>
