--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -12,7 +12,18 @@
         android:title="Train" />
 
     <item
+        android:id="@+id/navigation_Profile"
+        android:icon="@drawable/ic_account_circle_black_48dp"
+        android:title="Profile" />
+
+    <item
+        android:id="@+id/navigation_Summary"
+        android:icon="@drawable/summary"
+        android:title="Summary" />
+
+    <item
         android:id="@+id/navigation_reports"
         android:icon="@drawable/barcharticon"
         android:title="Reports" />
+
 </menu>
