--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
   <color name="iron">#CCCCCC</color>
   <color name="white">#FFFFFF</color>
 
-   <color name="colorPrimary">#3F51B5</color>
+   <color name="colorPrimary">#ff2015</color>
    <color name="colorPrimaryDark">#303F9F</color>
    <color name="colorAccent">#FF4081</color>
 
